// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelectAttributeFilterHandler > changeSelection() should trigger onSelectionChanged() callback > parameters 1`] = `
[
  {
    "selection": {
      "isInverted": true,
      "keys": [
        "/selectedElement",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler > clearSelection() should trigger onSelectionChanged() callback > parameters 1`] = `
[
  {
    "selection": {
      "isInverted": false,
      "keys": [],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler > commitSelection() should trigger onSelectionCommitted() callback > parameters 1`] = `
[
  {
    "selection": {
      "isInverted": true,
      "keys": [
        "/selectedElement",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler > invertSelection() should trigger onSelectionChanged() callback > parameters 1`] = `
[
  {
    "selection": {
      "isInverted": true,
      "keys": [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler > revertSelection() should trigger onSelectionChanged() callback > parameters 1`] = `
[
  {
    "selection": {
      "isInverted": false,
      "keys": [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler > should initialize selection for negative attribute filter > committed selection 1`] = `
{
  "isInverted": true,
  "keys": [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler > should initialize selection for negative attribute filter > working selection 1`] = `
{
  "isInverted": true,
  "keys": [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler > should initialize selection for positive attribute filter > committed selection 1`] = `
{
  "isInverted": false,
  "keys": [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler > should initialize selection for positive attribute filter > working selection 1`] = `
{
  "isInverted": false,
  "keys": [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;
